Fix contrast.
Fixed the contrast color from titles and background.

--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -44,7 +44,7 @@ h2 {
 }
 
 .title {
-	background-color: rgb(64, 158, 221) ;
+	background-color: rgb(61, 140, 192) ;
 	border-radius: 0.8em 0.8em 0 0 ;
 }
 
